# context-engine

./: .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  DESIGN-BASELINE.md  Makefile  PLAN.md  README.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
action_plane/typescript/: README.md  THIRD_PARTY_NOTICES.md  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
adapters/: __init__.py  exact_phrase.py  file_source.py
adapters/http/: __init__.py  app.py  authentication.py  contracts.py  membership_authority.py  organization_authority.py  route_policy.py  scope_authority.py  transport.py
adapters/parsers/: __init__.py  markdown.py
applications/: __init__.py  api.py  worker.py
bot_delivery/: __init__.py  egress.py
docs/agents/: domain.md  issue-tracker.md  prd-contextengine-implementation.md  triage-labels.md
docs/decisions/: 0001-adopt-doc-steward-standard.md  0002-bot-gateway-outside-engine.md  0003-group-chat-intersection-authorization.md  0004-wecom-only-weak-acl-degradation.md  0005-python-stack.md  0006-engine-delivers-context-not-answers.md  0007-postgres-as-authorization-truth.md  0008-modular-monolith-plus-worker.md  0009-pgvector-first-index.md  0010-policy-epoch-revocation.md  0011-read-write-plane-separation.md  0012-sealed-authorization-projection-pipeline.md  0013-trusted-delivery-egress-and-capability-taxonomy.md  0014-curation-snapshot-and-release-ownership.md  0015-rls-transaction-context-and-schema-manifest.md  0016-implementation-authority-and-vertical-slice-roadmap.md  0017-trusted-invocation-and-closed-runtime-access.md  0018-immutable-revision-publication.md  0019-security-catalog-normalization.md  0020-stage-organization-rls-before-actor-context.md  0021-stage-http-authentication-before-provider-selection.md  0022-stage-tenant-safe-empty-context-package.md  0023-bind-runtime-to-current-membership-user-actor.md  0024-model-effective-scope-as-finite-target-intersection.md  0025-bind-materialized-projection-to-the-current-runtime-transaction.md  0026-normalize-no-authorized-evidence.md  0027-organization-policy-epoch.md  0028-fail-closed-unavailable-runtime-capabilities.md  0029-bound-first-worker-lease-to-persistent-no-op-jobs.md  0030-bound-ticket-audiences.md  (+21 more)
engine/: __init__.py  api_main.py  build.py  supply_worker_main.py
migrations/: env.py
scripts/: __init__.py  database_harness.sh  freeze_openapi.py  provision_database_roles.py  run_m0_security_gate.py  validate_security_catalog.py  wait_for_database.py
tests/: __init__.py
(+240 files in other folders)
