[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "context-engine"
version = "0.1.0"
description = "Permission-aware context delivery engine"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
  "alembic>=1.16,<1.17",
  "fastapi>=0.116,<0.117",
  "pydantic>=2.13,<2.14",
  "psycopg[binary]>=3.2,<3.3",
  "sqlalchemy>=2.0,<2.1",
  "uvicorn>=0.35,<0.36",
]

[dependency-groups]
dev = [
  "httpx>=0.28,<0.29",
  "mypy>=1.17,<1.18",
  "pytest>=8.4,<8.5",
  "ruff>=0.12,<0.13",
]

[project.scripts]
context-engine-api = "applications.api:main"
context-engine-worker = "applications.worker:main"

[tool.hatch.build.targets.wheel]
packages = ["engine", "adapters", "applications"]

[tool.mypy]
python_version = "3.13"
strict = true
files = [
  "engine",
  "adapters",
  "applications",
  "migrations",
  "scripts/wait_for_database.py",
  "tests",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: requires the real PostgreSQL 17 + pgvector harness",
]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
