[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "context-engine"
version = "0.1.0"
description = "Permission-aware context delivery engine"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
  "alembic>=1.16,<1.17",
  "fastapi>=0.116,<0.117",
  "pydantic>=2.13,<2.14",
  "psycopg[binary]>=3.2,<3.3",
  "rfc8785>=0.1.4,<0.2",
  "sqlalchemy>=2.0,<2.1",
  "starlette>=0.48,<0.49",
  "uvicorn>=0.35,<0.36",
]

[dependency-groups]
dev = [
  "httpx>=0.28,<0.29",
  "hypothesis>=6,<7",
  "mypy>=1.17,<1.18",
  "pytest>=8.4,<8.5",
  "ruff>=0.12,<0.13",
]

[project.scripts]
context-engine-api = "applications.api:main"
context-engine-worker = "applications.worker:main"

[tool.hatch.build.targets.wheel]
packages = ["engine", "adapters", "applications"]

[tool.mypy]
python_version = "3.13"
strict = true
files = [
  "engine",
  "adapters",
  "applications",
  "migrations",
  "scripts/provision_database_roles.py",
  "scripts/wait_for_database.py",
  "tests",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: requires the real PostgreSQL 17 + pgvector harness",
]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
